--- a/web/pom.xml
+++ b/web/pom.xml
@@ -30,7 +30,17 @@
   </scm>
 	
 	
-	<build>
+	<distributionManagement>
+		<repository>
+			<id>nexus</id>
+			<url>http://ip172-18-0-15-c4ihpuvnjsv000fq75v0-8081.direct.labs.play-with-docker.com/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>nexus</id>
+			<url>http://70.37.110.200:8081/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+<build>
 		<finalName>web</finalName>
 		 <plugins>
 					
